<resources>
    <!-- branding -->
    <string name="app_name">Portal</string>
    <string name="app_slogan">Stats That Mean Something</string>

    <!-- user authentication -->
    <!-- field hints -->
    <string name="summoner_name">Summoner Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <!-- input validation -->
    <string name="summoner_name_format">3 to 16 alphanumeric characters</string>
    <string name="password_format">Between 6 and 20 characters</string>
    <string name="password_mismatch">Password mismatch</string>
    <!-- submit buttons -->
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <!-- text links -->
    <string name="go_to_register">No account yet? Create one</string>
    <string name="go_to_sign_in">Already have an account? Sign In</string>
    <!-- region selection -->
    <string-array name="select_region">
        <item>Select Region</item>
        <item>Brazil</item>
        <item>Europe Nordic &amp; East</item>
        <item>Europe West</item>
        <item>Korea</item>
        <item>Latin America North</item>
        <item>Latin America South</item>
        <item>North America</item>
        <item>Oceania</item>
        <item>Russia</item>
        <item>Turkey</item>
    </string-array>
    <string name="initializing_data">Grabbing your data &#8230;</string>
    <string name="cancel">Cancel</string>

    <!-- dialogs -->
    <string name="validate_ownership_title">Validate Ownership</string>
    <string name="validate_ownership">
        Almost done! Just change one of your rune pages to the number below in order
        to prove ownership of the summoner account. After changing your rune page, wait
        about 5 seconds before pressing Done to allow for the Riot servers to update.
    </string>
    <string name="done">Done</string>

    <!-- navigation -->
    <string name="account">Account</string>
    <string name="view_profile">View Profile</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="stats">Stats</string>
    <string name="recent_games">Recent Games</string>
    <string name="season_totals">Season Totals</string>
    <string name="with_friends">Games With Friends</string>
    <string name="select_queue">Select Queue</string>
    <string name="dynamic_queue">Dynamic Queue</string>
    <string name="solo_queue">Solo Queue</string>
    <string name="team_3">Ranked Team 3v3</string>
    <string name="sign_out">Sign Out</string>

    <!-- event messages -->
    <string name="message_placeholder">Message placeholder</string>
    <string name="nothing_here">Sorry there is nothing to see here</string>
    <string name="no_matches">You have not played this game mode this season.</string>
        <string name="no_friends_stats">
        You have no friends to compare stats to! Click the button below to add friends.
    </string>
    <string name="no_friends">You have no friends saved! Click the + button to add some.</string>
    <string name="no_friend_matches">None of your friends have played this game mode this season.</string>
    <string name="busy_updating">Updating your stats &#8230;</string>
    <string name="busy_calculating">Crunching the numbers &#8230;</string>

    <!-- activity titles -->
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>

    <!-- element labels and titles -->
    <string name="add_friend">Add Friend</string>
    <string name="add_friends">Add Friends</string>

    <!-- error messages -->
    <string name="select_region">Please select a region</string>
    <string name="internet_not_available">Internet not available</string>
    <string name="invalid_summoner_name">Invalid summoner name</string>
    <string name="code_not_found">Rune page code not found</string>
    <string name="cant_add_yourself_as_friend">Cannot add yourself as a friend.</string>
    <string name="friend_limit_reached">Sorry, only up to 7 friends are allowed at this time.</string>
    <string name="friend_already_exists">This friend is already on your list.</string>

    <!-- content descriptions -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="thumbnail">Image Thumbnail</string>
    <string name="thumbnail_label">Thumbnail Label</string>
    <string name="thumbnail_summoner_icon">Summoner Icon Thumbnail</string>
    <string name="series_color">Series color</string>
</resources>
