<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single" >
        <item android:title="@string/account" >
            <menu>
                <item
                    android:id="@+id/view_profile"
                    android:icon="@drawable/ic_view_profile"
                    android:title="@string/view_profile" />
                <item
                    android:id="@+id/manage_friends"
                    android:icon="@drawable/ic_inner_circle"
                    android:title="@string/manage_friends" />
            </menu>
        </item>
    </group>
    <item android:title="@string/stats" >
        <menu>
            <item
                android:id="@+id/recent_games"
                android:icon="@drawable/ic_recent_games"
                android:title="@string/recent_games" />
            <item
                android:id="@+id/season_totals"
                android:icon="@drawable/ic_season_totals"
                android:title="@string/season_totals" />
            <item
                android:id="@+id/with_friends"
                android:icon="@drawable/ic_with_friends"
                android:title="@string/with_friends" />
        </menu>
    </item>
</menu>