<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/app_name"
        android:textSize="75sp"
        android:textColor="@color/logo1"
        />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/app_slogan"
        android:textSize="20sp"
        android:textColor="@color/logo2"
        />

    <EditText
        android:id="@+id/summoner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:focusable="true"
        android:hint="@string/summoner_name"
        android:inputType="text"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/summoner_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:ems="12"
        android:focusable="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        />

    <Spinner
        android:id="@+id/region_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@id/confirm_password"
        android:layout_alignEnd="@id/confirm_password"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/password"
        android:layout_alignEnd="@id/password"
        android:layout_below="@id/region_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/register_button"
        android:background="@color/logo2_faded"
        />

    <TextView
        android:id="@+id/go_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:text="@string/go_to_sign_in"
        android:textSize="16sp"
        />
</RelativeLayout>