<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_select_queue"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/select_queue"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"/>

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#C0C0C0"/>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:mrl_rippleOverlay="true">

        <TextView
            android:id="@+id/dynamic_queue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/dynamic_queue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"/>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:mrl_rippleOverlay="true">

        <TextView
            android:id="@+id/solo_queue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/solo_queue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"/>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:mrl_rippleOverlay="true">

        <TextView
            android:id="@+id/team_3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/team_3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"/>
    </com.balysv.materialripple.MaterialRippleLayout>
</LinearLayout>